<resources>
    <string name="app_name">MapsFencing</string>
    <string name="title_activity_admin_maps">AdminMapsActivity</string>
    <string name="title_activity_user_maps">UserMapsActivity</string>
    <string name="email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">signup</string>
    <string name="full_name">Enter full name</string>
    <string name="contact">Enter contact</string>
    <string name="confirm_password">Confirm pasword</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Signin</string>
</resources>