<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".authentication.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fencing_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/heading_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="Sign up here"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname_layout_signup"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading_"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/full_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/icon_splash_background"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/already_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullname_layout_signup"
                android:layout_marginStart="20dp"
                android:text="Email already exists!"
                android:textColor="@color/icon_splash_background"
                android:textSize="15sp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout_signup"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/already_exists"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/icon_splash_background"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_layout_signup"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout_signup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/contact"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contact_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/icon_splash_background"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_signup"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_layout_signup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/enter_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/icon_splash_background"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/icon_splash_background"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/hide_password_signup1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignEnd="@+id/password_layout_signup"-->
<!--                android:layout_alignBottom="@+id/password_layout_signup"-->
<!--                android:layout_marginEnd="15dp"-->
<!--                android:layout_marginBottom="5dp"-->
<!--                android:padding="10dp"-->
<!--                android:src="@drawable/hide_password" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout_signup"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout_signup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/icon_splash_background"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirm_password_layout_signup"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttons_signin"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/icon_splash_background" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/icon_splash_background" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>