<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fencing_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="Sign in here"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textSize="11sp"
                    android:textColor="@color/icon_splash_background"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/inputlayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/enter_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/icon_splash_background"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/icon_splash_background"
                app:hintEnabled="true"
                app:hintTextColor="@color/icon_splash_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:padding="20dp"
                    android:textSize="11sp"
                    android:textColor="@color/icon_splash_background"/>

            </com.google.android.material.textfield.TextInputLayout>

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/hide_password_login"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/hide_password"-->
<!--                android:layout_alignEnd="@+id/password_layout"-->
<!--                android:layout_alignBottom="@+id/password_layout"-->
<!--                android:padding="10dp"-->
<!--                android:layout_marginEnd="15dp"-->
<!--                android:layout_marginBottom="5dp"-->
<!--                />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons_signin"
                android:clickable="true"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:focusable="true" />

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/icon_splash_background" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:clickable="true"
                    android:textColor="@color/icon_splash_background" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/auth_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>